toolchain/internal/core/analysis/testdata/errors/naming/const_not_camel.vdl
// @expect: E102

const MAX_PAGE_SIZE = 100
